--- a/config.yaml
+++ b/config.yaml
@@ -98,7 +98,7 @@ params:
     opengraph:
         twitter:
             # Your Twitter username
-            site:
+            site: alice
 
             # Available values: summary, summary_large_image
             card: summary_large_image
